--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marketing Creativo</title>
+    <title>Landing Page</title>
   </head>
-  <body></body>
+  <body>
+    <!--Tags semanticas-->
+    <header>
+      <div id="title">
+        <h1>Marketing</h1>
+        <h1>Criativo</h1>
+
+        <ul>
+          <a href="#"><li>Início</li></a>
+          <a href=""><li>Serviços</li></a>
+          <a href="#"><li>Sobre</li></a>
+          <a href="#"><li>Contato</li></a>
+          <a href="#"><li>Já tem uma conta?</li></a>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <aside>
+        <h2>Inscreva-se agora</h2>
+        <h2>na Newsletter</h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s,
+        </p>
+
+        <!--Colocar os botoes dentro de form, tag semantica-->
+        <form action="">
+          <input type="text" placeholder="Nome" />
+          <input type="email" placeholder="e-mail" />
+          <input type="submit" value="Enviar" />
+        </form>
+      </aside>
+
+      <article>
+        <img src="components/images/zen-girl.png" alt="Garota Meditando" />
+      </article>
+    </main>
+  </body>
 </html>
