--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="components/styles/style.css" />
+    <link rel="stylesheet" href="components/styles/fonts.css" />
     <title>Landing Page</title>
   </head>
   <body>
@@ -11,19 +13,19 @@
       <div id="title">
         <h1>Marketing</h1>
         <h1>Criativo</h1>
-
-        <ul>
-          <a href="#"><li>Início</li></a>
-          <a href=""><li>Serviços</li></a>
-          <a href="#"><li>Sobre</li></a>
-          <a href="#"><li>Contato</li></a>
-          <a href="#"><li>Já tem uma conta?</li></a>
-        </ul>
       </div>
+
+      <ul>
+        <a href="#"><li>Início</li></a>
+        <a href=""><li>Serviços</li></a>
+        <a href="#"><li>Sobre</li></a>
+        <a href="#"><li>Contato</li></a>
+        <a href="#" id="inscreva-se-btn"><li>Já tem uma conta?</li></a>
+      </ul>
     </header>
     <main>
       <aside>
-        <h2>Inscreva-se agora</h2>
+        <h2><span>Inscreva-se agora</span></h2>
         <h2>na Newsletter</h2>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
