--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="components/styles/style.css" />
     <link rel="stylesheet" href="components/styles/fonts.css" />
+    <link rel="stylesheet" href="components/styles/media.css" />
     <title>Landing Page</title>
   </head>
   <body>
